# taskflows

./: README.md  fluent-bit.conf  params.md  pyproject.toml
.github/workflows/: pypi-publish.yml
task_flows/: admin.py  utils.py
task_flows/docker/: image.py
task_flows/tasks/: decorators.py  logger.py
taskflows/: __init__.py  admin.py  cli.py  common.py  config.py  dashboard.py  db.py  entrypoints.py  slack.py  tasks.py  utils.py
taskflows/service/: __init__.py  constraints.py  dashboard.py  docker.py  entrypoints.py  exec.py  schedule.py  service.py  utils.py
tests/: Dockerfile  conftest.py  docker-compose.dev.yml  srv.py  test_service.py  test_task.py  test_task_logger.py
