[project]
name = "taskflows"
version = "0.8.6"
description = "Python task management, scheduling, alerts."
authors = [{ name = "Dan Kelleher", email = "kelleherjdan@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
readme = "README.md"

dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm",
    "click",
    "rich",
    "docker",
    "textdistance",
    "dynamic-imports>=1.0.0",
    "alert-msgs>=0.5.0",
    "quicklogs>=1.1.0",
    "func-timeout>=4.0.0",
]

[tool.setuptools]
packages = ["taskflows"]

[project.optional-dependencies]
service = ["python-dotenv", "docker", "dbus-python"]
dev = ["black", "pytest", "pytest-asyncio", "psycopg[binary]"]

[build-system]
requires = ["setuptools>=43.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tf = 'taskflows.admin:cli'
_import_and_call_function = 'taskflows.service.exec:_import_and_call_function'
_import_and_run_docker_service = 'taskflows.service.exec:_import_and_run_docker_service'
